--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 main {
-    background-color: rgb(230, 159, 126);
+    background-image: linear-gradient(rgb(192, 141, 169), white);
 }
 
 ul {
